# commonlibsse

./: .aiderignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  package.json  vcpkg.json  xmake-rules.lua  xmake.lua
.claude/: CLAUDE.md
.github/workflows/: build.yml  main_ci.yml  maintenance.yml  release.yml  test-consumer.yml
cmake/: sourcelist.cmake  testlist.cmake
docs/: RuntimeDataAccessors.md
include/RE/: GenerateDirectives.ps1  Offsets.h  Offsets_RTTI.h  Offsets_VTABLE.h  RTTI.h  Skyrim.h
include/RE/A/: AIProcess.h  AITimer.h  AbstractHeap.h  ActionInput.h  ActivateChoiceMenuCallbackFunctor.h  ActivateHandler.h  ActiveEffect.h  ActiveEffectFactory.h  Actor.h  ActorEquipManager.h  ActorKill.h  ActorKnowledge.h  ActorLOSLocation.h  ActorMagicCaster.h  ActorMover.h  ActorPackage.h  ActorState.h  ActorTargetCheck.h  ActorValueInfo.h  ActorValueList.h  ActorValueMeter.h  ActorValueOwner.h  Archive.h  (+20 more)
include/REL/: Common.h  Relocation.h  RuntimeDataAccessors.h  Version.h
include/SKSE/: API.h  Events.h  Interfaces.h  RegistrationMap.h  RegistrationMapUnique.h  SKSE.h  Version.h
res/: commonlib-plugin.rc.in  commonlibsse-ng-plugin.cpp.in  commonlibsse.natvis
scripts/: build-all-presets.cmd  cmake_generate.py
src/REL/: Relocation.cpp  Version.cpp
src/SKSE/: API.cpp  RegistrationSetUnique.cpp
test_consumer/: CMakeLists.txt  README.md  test.cpp
tests/REL/: Relocation.test.cpp  StaticAssertSize.test.cpp  version-1-4-15-0.csv
(+1437 files in other folders)
